ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  labels:
    app: ping-pong
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - image: ssantos94/ping-pong:9s8hg9bw
        name: ping-pong
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
