ping-pong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  labels:
    app.kubernetes.io/name: log-output-ingress
spec:
  rules:
  - http:
      paths:
      - path: /random
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 8080
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 3000
